[package]
name = "rpncalc"
version = "0.2.2"
authors = ["PACKAGE AUTHOR <package_author@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version="3.0.0", features=["derive"] }
thiserror = "1.0.40"
